duniverse/lwt/test/ppx_expect/cases/let_1.expect
File "let_1.ml", line 2, characters 10-12:
Error: This pattern matches values of type unit
       but a pattern was expected which matches values of type int
