duniverse/lwt/test/ppx_expect/cases/let_1.ml
let _ =
  let%lwt () = Lwt.return 5 in
  Lwt.return ();;
